@@ -139,7 +139,6 @@ gdk_return BATins(BAT *b, BAT *c, bit force);
 BAT *BATintersectcand(BAT *a, BAT *b);
 BAT *BATjoin(BAT *l, BAT *r, BUN estimate);
 gdk_return BATkey(BAT *b, int onoff);
-BAT *BATleftjoin(BAT *l, BAT *r, BUN estimate);
 BAT *BATmark(BAT *b, oid base);
 BAT *BATmark_grp(BAT *b, BAT *g, const oid *base);
 void *BATmax(BAT *b, void *aggr);
@@ -718,8 +717,6 @@ str ALGgroupby(bat *res, const bat *gids, const bat *cnts);
 str ALGjoin2(bat *l, bat *r, const bat *lid, const bat *rid);
 str ALGjoinPath(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str ALGleftfetchjoin(bat *result, const bat *lid, const bat *rid);
-str ALGleftjoin(bat *result, const bat *lid, const bat *rid);
-str ALGleftjoinestimate(bat *result, const bat *lid, const bat *rid, const lng *estimate);
 str ALGlike(bat *ret, const bat *bid, const str *k);
 str ALGmaxany(ptr result, const bat *bid);
 str ALGminany(ptr result, const bat *bid);
@@ -2265,8 +2262,6 @@ int keepProp;
 str languageRef;
 str leftfetchjoinPathRef;
 str leftfetchjoinRef;
-str leftjoinPathRef;
-str leftjoinRef;
 str levenshtein_impl(int *result, str *s, str *t, int *insdel_cost, int *replace_cost, int *transpose_cost);
 str levenshteinbasic2_impl(int *result, str *s, str *t);
 str levenshteinbasic_impl(int *result, str *s, str *t);
