@@ -13,11 +13,6 @@ command groupby(gids:bat[:oid,:oid], cnts:bat[:oid,:wrd]) :bat[:oid,:oid]
 address ALGgroupby
 comment "Produces a new BAT with groups identified by the head column. The result contains tail times the head value, ie the tail contains the result group sizes.";
 
-command leftjoin( left:bat[:oid,:any_2], right:bat[:any_2,:any_3]) :bat[:oid,:any_3]
-address ALGleftjoin;
-command leftjoin( left:bat[:oid,:any_2], right:bat[:any_2,:any_3], estimate:lng) :bat[:oid,:any_3]
-address ALGleftjoinestimate;
-
 #END OF HEADLESS PLANS
 
 command find(b:bat[:oid,:any_1], t:any_1):oid
