@@ -43,12 +43,11 @@
 #define SMALL_OPERAND	1024
 
 static BUN
-ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
+ALGjoinCost(Client cntxt, BAT *l, BAT *r)
 {
 	BUN lc, rc;
 	BUN cost=0;
 
-	(void) flag;
 	(void) cntxt;
 	lc = BATcount(l);
 	rc = BATcount(r);
@@ -77,7 +76,7 @@ ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
 		/* orderedfetchjoin > sequential access */
 		cost /= 6;
 	else
-	if (BATtdense(l) && BAThordered(r) && flag != 0 /* no leftjoin */)
+	if (BATtdense(l) && BAThordered(r))
 		/* (reversed-) orderedfetchjoin -> sequential access */
 		cost /= 6;
 	else
@@ -85,7 +84,7 @@ ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
 		/* fetchjoin with random access in L1 */
 		cost /= 5;
 	else
-	if (BATtdense(l) && lc <= SMALL_OPERAND && flag != 0 /* no leftjoin */)
+	if (BATtdense(l) && lc <= SMALL_OPERAND)
 		/* (reversed-) fetchjoin with random access in L1 */
 		cost /= 5;
 	else
@@ -97,7 +96,7 @@ ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
 		/* binary-lookup-join with random access in L1 */
 		cost /= 3;
 	else
-	if (BATtordered(l) && lc <= SMALL_OPERAND && flag != 0 /* no leftjoin */)
+	if (BATtordered(l) && lc <= SMALL_OPERAND)
 		/* (reversed-) binary-lookup-join with random access in L1 */
 		cost /= 3;
 	else
@@ -109,7 +108,7 @@ ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
 		/* hashjoin with hashtable in L1 */
 		cost /= 3;
 	else
-	if (lc <= SMALL_OPERAND && flag != 0 /* no leftjoin */)
+	if (lc <= SMALL_OPERAND)
 		/* (reversed-) hashjoin with hashtable in L1 */
 		cost /= 3;
 	else
@@ -117,7 +116,7 @@ ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
 		/* fetchjoin with random access beyond L1 */
 		cost /= 2;
 	else
-	if (BATtdense(l) && flag != 0 /* no leftjoin */)
+	if (BATtdense(l))
 		/* (reversed-) fetchjoin with random access beyond L1 */
 		cost /= 2;
 	else
@@ -132,7 +131,7 @@ ALGjoinCost(Client cntxt, BAT *l, BAT *r, int flag)
 
 
 static BAT *
-ALGjoinPathBody(Client cntxt, int top, BAT **joins, int flag)
+ALGjoinPathBody(Client cntxt, int top, BAT **joins)
 {
 	BAT *b = NULL;
 	BUN estimate, e = 0;
@@ -149,12 +148,12 @@ ALGjoinPathBody(Client cntxt, int top, BAT **joins, int flag)
 	/* solve the join by pairing the smallest first */
 	while (top > 1) {
 		j = 0;
-		estimate = ALGjoinCost(cntxt,joins[0],joins[1],flag);
+		estimate = ALGjoinCost(cntxt,joins[0],joins[1]);
 		ALGODEBUG
 			fprintf(stderr,"#joinPath estimate join(%d,%d) %d cnt="BUNFMT" %s\n", joins[0]->batCacheid, 
 				joins[1]->batCacheid,(int)estimate, BATcount(joins[0]), postpone[0]?"postpone":"");
 		for (i = 1; i < top - 1; i++) {
-			e = ALGjoinCost(cntxt,joins[i], joins[i + 1],flag);
+			e = ALGjoinCost(cntxt,joins[i], joins[i + 1]);
 			ALGODEBUG
 				fprintf(stderr,"#joinPath estimate join(%d,%d) %d cnt="BUNFMT" %s\n", joins[i]->batCacheid, 
 					joins[i+1]->batCacheid,(int)e,BATcount(joins[i]),  postpone[i]?"postpone":"");
@@ -173,21 +172,9 @@ ALGjoinPathBody(Client cntxt, int top, BAT **joins, int flag)
 		 * against the first operand. For all others operand pairs, the cheapest join suffice.
 		 */
 
-		switch(flag){
-		case 0:
-			if ( j == 0) {
-				b = BATleftjoin(joins[j], joins[j + 1], BATcount(joins[j]));
-				ALGODEBUG{
-					fprintf(stderr,"#joinpath step produces "BUNFMT"\n", BATcount(b));
-				}
-				break;
-			}
-		case 3:
-			b = BATproject(joins[j], joins[j + 1]);
-			ALGODEBUG{
-				fprintf(stderr,"#joinpath step produces "BUNFMT"\n", BATcount(b));
-			}
-			break;
+		b = BATproject(joins[j], joins[j + 1]);
+		ALGODEBUG{
+			fprintf(stderr,"#joinpath step produces "BUNFMT"\n", BATcount(b));
 		}
 		if (b==NULL){
 			if ( postpone[j] && postpone[j+1]){
@@ -254,7 +241,6 @@ ALGjoinPath(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 	bat *r = getArgReference_bat(stk, pci, 0);
 	BAT *b, **joins = (BAT**)GDKmalloc(pci->argc*sizeof(BAT*)); 
 	int error = 0;
-	str leftjoinPathRef = putName("leftjoinPath",12);
 
 	assert(pci->argc > 1);
 	if ( joins == NULL)
@@ -300,10 +286,8 @@ ALGjoinPath(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci)
 
 		for( --top; top>=0; top--)
 			BBPunfix(joins[top]->batCacheid);
-	} else if (getFunctionId(pci) == leftjoinPathRef) {
-		b = ALGjoinPathBody(cntxt,top,joins, 0); 
 	} else {
-		b = ALGjoinPathBody(cntxt,top,joins, 3); 
+		b = ALGjoinPathBody(cntxt,top,joins); 
 	}
 
 	GDKfree(joins);
