@@ -156,10 +156,6 @@ pattern optimizer.joinPath(mod:str, fcn:str):str
 address OPTwrapper
 comment "Join path constructor";
 
-pattern algebra.leftjoinPath(l:bat[:oid,:any]...):bat[:oid,:any]
-address ALGjoinPath
-comment "Routine to handle join paths.  The type analysis is rather tricky.";
-
 pattern algebra.leftfetchjoinPath(l:bat[:oid,:any]...):bat[:oid,:any]
 address ALGjoinPath
 comment "Routine to handle join paths.  The type analysis is rather tricky.";
